Cleaned up project.
Started work on driver installation... I think I need to pass in an interface to install the driver to.

--- a/Particle.WifiSetup/App.config
+++ b/Particle.WifiSetup/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="BaudRate" value="115200" />
+    <add key="DriverName" value="photon.inf"/>
   </appSettings>
 </configuration>
